[gd_scene load_steps=11 format=3 uid="uid://dtycxrbhxbcw"]

[ext_resource type="Script" uid="uid://dcsy451a1d106" path="res://scripts/entities/enemy.gd" id="2_ktqfp"]
[ext_resource type="Texture2D" uid="uid://3j8wwn05wc58" path="res://assets/actors/herz.png" id="3_defa4"]
[ext_resource type="Texture2D" uid="uid://dm8oc8i1qoexr" path="res://assets/actors/tap.png" id="3_ktqfp"]
[ext_resource type="Texture2D" uid="uid://dntc1wemd87ye" path="res://assets/actors/herz_bad.png" id="4_jr1g6"]
[ext_resource type="AudioStream" uid="uid://hdog2ubqx2ki" path="res://assets/music/puk.mp3" id="5_jr1g6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vufel"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_jr1g6"]
resource_name = "Bad"
length = 1.0001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HerzBad:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.7001, 1, 1.0001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1e-05, 1e-05), Vector2(0.1, 0.1), Vector2(0.1, 0.1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Herz:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.7001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.1, 0.1), Vector2(0.1, 0.1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_defa4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TapEffectSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HerzBad:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Herz:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_ktqfp"]
resource_name = "fade_out_tap"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TapEffectSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jr1g6"]
_data = {
&"Bad": SubResource("Animation_jr1g6"),
&"RESET": SubResource("Animation_defa4"),
&"fade_out_tap": SubResource("Animation_ktqfp")
}

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("2_ktqfp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vufel")
debug_color = Color(0.30049342, 0.49596357, 1, 0.41960785)

[node name="Hitbox" type="Area2D" parent="."]

[node name="EnemySprite" type="Sprite2D" parent="Hitbox"]
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_vufel")
debug_color = Color(0.30049342, 0.49596357, 1, 0.41960785)

[node name="FlipFlopTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TapEffectSprite" type="Sprite2D" parent="."]
visible = false
z_index = -4
scale = Vector2(0.11, 0.11)
texture = ExtResource("3_ktqfp")

[node name="Herz" type="Sprite2D" parent="."]
z_index = 99
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("3_defa4")

[node name="HerzBad" type="Sprite2D" parent="."]
z_index = 99
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_jr1g6")

[node name="BadEndTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TapEffectTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="TapFadeAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jr1g6")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jr1g6")
